namespace-np-calico.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-app2-to-app2
  namespace: app2
spec:
  selector: app == 'eks-sample-nginx-app2'
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: app == 'eks-sample-nginx-app2'
      destination:
        ports:
          - 80
